favicon + readability fixes

--- a/header.css
+++ b/header.css
@@ -48,18 +48,10 @@
 .header-ult-info {
     height: 60%;
     display: flex;
-    /* flex-direction: column; */
     flex-wrap: wrap;
     margin-left: 4vw;
     color: #f0e6d2;
 }
-
-/* .header-ult-info img {  
-    margin-right: auto;
-    margin-left: 2vw;
-    height: 70px;
-    align-self: center;
-} */
 
 .header-ult-info-text {
     font-family: 'Spiegel';
@@ -104,13 +96,10 @@ h1 {
 }
 
 html, body {
-    /* Remove all padding and margins */
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    /* max-width: 2400px;
-    max-height: 1200px; */
 }
 
 footer {
@@ -126,11 +115,7 @@ a {
     margin-left: auto;
 }
 
-/* body {
-    display: flex;
-    flex-direction: column;
-} */
-
+/* Style changes for smaller screens */
 @media screen and (max-width: 1200px ){
     .header-container {
         background-color: rgb(0,0,30);
